canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flexmaster-service
  labels:
    app: flexmaster-app
spec:
  selector:
    app: flexmaster-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
